# careerfit-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: job_description.txt  resume.txt  skill_taxonomy.csv
examples/: run_engine.py
src/: preprocessing.py  recommender.py  scoring.py  similarity_model.py  skill_extractor.py
src/careerfit/api/: app.py  routes.py  schemas.py
src/careerfit/engine/: matcher.py  preprocessing.py  recommender.py  skill_extractor.py  text_extractor.py
